Add VM options for different types of GC.